--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,20 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.link {
+  color: rgb(156 163 175);
+  &:hover {
+    color: rgb(81, 68, 55);
+  }
+  transition: select-none;
+  opacity: 0.5;
+  font-size: x-small;
+}
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
